--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ p {
   font-size: 16px;
 }
 
-section.main-section, section.greet-sect, section.random-sect, .color-sect, .credit-sect, .rating-sect, .driver-sect, .likebt-sect, .pictureclick-sect, .dices-sect, .carousel-sect {
+section.main-section, section.greet-sect, section.random-sect, .color-sect, .credit-sect, .rating-sect, .driver-sect, .likebt-sect, .pictureclick-sect, .dices-sect, .carousel-sect, .numbers-sect {
   margin: 2vh 4vw;
 }
 
@@ -192,4 +192,28 @@ img.maxence-pict {
 
 .bts-carrousel button {
   font-size: 30px;
+}
+
+.redbk {
+  background-color: red;
+}
+
+.whitebk, .redbk {
+  border: 2px solid #455eb5;
+  align-items: center;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 800;
+  justify-content: center;
+}
+
+.number-table {
+  display: grid;
+  grid-gap: 0rem;
+  grid-template-columns: 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+  margin: 0 auto;
+  justify-content: center;
 }
